--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -11,6 +11,7 @@
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:padding="2pd"
         android:src="@drawable/ic_check" />
 
     <TextView
